@@ -19,38 +19,59 @@ package com.echothree.control.user.contact.server.command;
 import com.echothree.control.user.contact.common.form.GetContactMechanismPurposesForm;
 import com.echothree.control.user.contact.common.result.ContactResultFactory;
 import com.echothree.model.control.contact.server.control.ContactControl;
+import com.echothree.model.data.contact.server.entity.ContactMechanismPurpose;
 import com.echothree.model.data.user.common.pk.UserVisitPK;
-import com.echothree.util.common.validation.FieldDefinition;
 import com.echothree.util.common.command.BaseResult;
-import com.echothree.util.server.control.BaseSimpleCommand;
+import com.echothree.util.common.validation.FieldDefinition;
+import com.echothree.util.server.control.BasePaginatedMultipleEntitiesCommand;
 import com.echothree.util.server.persistence.Session;
-import java.util.Arrays;
-import java.util.Collections;
+import java.util.Collection;
 import java.util.List;
 
 public class GetContactMechanismPurposesCommand
-        extends BaseSimpleCommand<GetContactMechanismPurposesForm> {
-    
+        extends BasePaginatedMultipleEntitiesCommand<ContactMechanismPurpose, GetContactMechanismPurposesForm> {
+
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
 
     static {
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
-                ));
+        FORM_FIELD_DEFINITIONS = List.of();
     }
-    
+
     /** Creates a new instance of GetContactMechanismPurposesCommand */
     public GetContactMechanismPurposesCommand(UserVisitPK userVisitPK, GetContactMechanismPurposesForm form) {
         super(userVisitPK, form, null, FORM_FIELD_DEFINITIONS, true);
     }
-    
+
     @Override
-    protected BaseResult execute() {
+    protected void handleForm() {
+        // No form fields.
+    }
+
+    @Override
+    protected Long getTotalEntities() {
         var contactControl = Session.getModelController(ContactControl.class);
+
+        return contactControl.countContactMechanismPurposes();
+    }
+
+    @Override
+    protected Collection<ContactMechanismPurpose> getEntities() {
+        var contactControl = Session.getModelController(ContactControl.class);
+
+        return contactControl.getContactMechanismPurposes();
+    }
+
+    @Override
+    protected BaseResult getResult(Collection<ContactMechanismPurpose> entities) {
         var result = ContactResultFactory.getGetContactMechanismPurposesResult();
-        
-        result.setContactMechanismPurposes(contactControl.getContactMechanismPurposeTransfers(getUserVisit()));
-        
+
+        if(entities != null) {
+            var contactControl = Session.getModelController(ContactControl.class);
+
+            result.setContactMechanismPurposes(contactControl.getContactMechanismPurposeTransfers(getUserVisit(), entities));
+        }
+
         return result;
     }
-    
+
 }
